fix: use `interpret` in tracked core